--- a/WEB_PRACTICA_FINAL/css/styles.css
+++ b/WEB_PRACTICA_FINAL/css/styles.css
@@ -1,3 +1,130 @@
 *{
     margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    font-family: 'Sora', sans-serif;
+    scroll-behavior: smooth;
+}
+
+:root {
+    --color-negro-texto: #1C1A31;
+    --color-morado-boton: #5E239D;
+    --color-rosa-hover: #F61067;
+    --color-blanco-fondo: #F4F4ED;
+    --color-verde-links: #00F0B5;
+}
+
+header {
+    height: auto;
+    min-height: 100vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: var(--color-rosa-hover);
+}
+
+header > p {
+    max-width: 600px;
+    margin: auto;
+}
+
+#menu {
+    height: 4em;
+    margin: 2em;
+    background-color: var(--color-blanco-fondo);
+    border: 2px solid #1C1A31;
+    border-radius: 50px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#logo {
+    width: 30%;
+    align-content: flex-start;
+    margin-left: 1em;
+}
+
+#logo > img {
+    height: 3em;
+}
+
+#menu > ul {
+    width: 70%;
+    height: 3em;
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+    align-content: flex-end;
+    align-items: center;
+    margin-bottom: 0em;
+}
+
+#menu > ul > li {
+    list-style: none;
+}
+
+#menu > ul > li > button {
+    height: 2em;
+    padding: 0 1em;
+    background-color: #F61067;
+    border: 2px solid #F61067;
+    border-radius: 50px;
+}
+
+#menu > ul > li > button > a {
+    color: var(--color-blanco-fondo);
+    text-decoration: none;
+}
+
+#menu > ul > li > button:hover {
+    background-color: var(--color-blanco-fondo);
+
+}
+
+#menu > ul > li > button:hover > a {
+    color: var(--color-rosa-hover);
+    font-weight: bold;
+}
+
+#menu > ul > li > a,
+#menu > ul > li > i {
+    color: var(--color-negro-texto);
+    text-decoration: none;
+}
+
+#menu > ul > li:last-child {
+    display: none;
+}
+
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 700px) {
+
+    #menu > ul > li:last-child {
+        display: block;
+    }
+
+    #menu > ul > li:not(:last-child) {
+        display: none;
+    }
+
+    #menu > ul {
+        height: auto;
+        padding: 1em;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    #menu > ul > li {
+        margin: 0.2em 0;
+    }
+
+    #menu > ul > li:hover {
+        display: block;
+        transition-delay: ease-in-out 0.5s;
+    }
 }
