--- a/WEB_PRACTICA_FINAL/css/styles.css
+++ b/WEB_PRACTICA_FINAL/css/styles.css
@@ -53,7 +53,10 @@ nav {
 }
 
 #logo > img {
-    height: 3em;
+    height: 5em;
+    position: absolute;
+    top: 1.5em;
+    left: 70px;
 }
 
 #menu > ul {
@@ -166,3 +169,5 @@ nav {
     #menu > ul > li {
         margin: 0.2em 0;
     }
+
+}
