--- a/WEB_PRACTICA_FINAL/css/styles.css
+++ b/WEB_PRACTICA_FINAL/css/styles.css
@@ -28,6 +28,8 @@ header > p {
     margin: auto;
 }
 
+/* CÓDIGO DEL NAV >>>>>>>>>>>>>>>>>>>>>>>>>*/
+
 nav {
     height: 4em;
     margin: 2em;
@@ -144,6 +146,95 @@ nav {
 #menu > ul > li:hover > a {
     font-weight: bold;
 }
+
+/* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
+
+#portada_home {
+    max-width: 1200px;
+    margin: 1em 2em 0 2em;
+    padding: 2em 1em;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--color-blanco-fondo);
+    border-radius: 30px 30px 0 0;
+}
+
+#portada_home > div.row {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+#portada_home > div.row > div.col > img:first-child {
+    display: flex;
+    align-self: flex-start;
+}
+
+#portada_home > div.row > div.col > img:last-child {
+    display: flex;
+    align-self: flex-end;
+}
+
+#portada_home img.starL {
+    height: 15em;
+    padding-left: 5em;
+}
+
+#portada_home img.starM {
+    height: 10em;
+}
+
+#portada_home img.starS {
+    height: 6em;
+}
+
+#portada_home > div.row > div.col-5 > img.logo_header {
+    height: auto;
+    width: 70%;
+}
+
+#portada_home > div.row > div.col-5 > img.gato_header {
+    height: 30%;
+    position: absolute;
+    z-index: 3;
+    bottom: 14%;
+    left: 30%;
+}
+
+div.marquee {
+    margin-top: 1em;
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    width: 100vw;
+    overflow: hidden;
+    background-color: var(--color-rosa-hover);
+}
+
+ul.marquee_content {
+    list-style: none;
+    display: flex;
+    animation: scrolling 10s linear infinite;
+    padding-top: 0.5em;
+}
+
+li.marquee_item {
+    flex-shrink: 0;
+}
+
+li.marquee_item > h2 {
+    font-size: 4em;
+    color: var(--color-blanco-fondo);
+}
+
+@keyframes scrolling {
+    0% { transform: translateX(0) }
+    100% { transform: translateX(-100%) }
+}
+
 
 
 /* MEDIA QUERIES */
