--- a/WEB_PRACTICA_FINAL/css/styles.css
+++ b/WEB_PRACTICA_FINAL/css/styles.css
@@ -28,6 +28,10 @@ header > p {
     margin: auto;
 }
 
+main {
+    background-color: var(--color-blanco-fondo);
+}
+
 /* CÓDIGO DEL NAV >>>>>>>>>>>>>>>>>>>>>>>>>*/
 
 nav {
@@ -153,7 +157,7 @@ nav {
 #portada_home {
     margin: 1em 2em 0 2em;
     padding: 2em 1em;
-    min-height: calc(100vh - 10em);
+    min-height: calc(100vh - 15em);
 
     display: flex;
     align-items: center;
@@ -213,7 +217,6 @@ div.marquee {
     position: absolute;
     z-index: 1;
     bottom: 0;
-    width: 100vw;
     overflow: hidden;
     background-color: var(--color-rosa-hover);
 }
@@ -239,7 +242,88 @@ li.marquee_item > h2 {
     100% { transform: translateX(-100%) }
 }
 
+#intro {
+    background-color: var(--color-blanco-fondo);
+}
 
+#text {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    margin: 0 2em;
+    padding: 1em 0;
+}
+
+#text > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+}
+
+#text h3 {
+    font-size: 8em;
+    font-weight: bolder;
+    padding-right: 0.5em;
+}
+
+div.text_img {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: baseline;
+}
+
+div.text_img > img {
+    width: 20%;
+}
+
+h3.LED_rosa:hover {
+    color: var(--color-rosa-hover);
+  text-shadow:
+    
+    0 0 7px #F4F4ED,
+    0 0 10px #F4F4ED,
+    0 0 21px #F4F4ED,
+    
+    0 0 42px #F61067,
+    0 0 82px #F61067,
+    0 0 92px #F61067,
+    0 0 102px #F61067,
+    0 0 151px #F61067;
+}
+
+h3.LED_verde:hover {
+    color: var(--color-verde-links);
+  text-shadow:
+    
+    0 0 7px #F4F4ED,
+    0 0 10px #F4F4ED,
+    0 0 21px #F4F4ED,
+    
+    0 0 42px #00F0B5,
+    0 0 82px #00F0B5,
+    0 0 92px #00F0B5,
+    0 0 102px #00F0B5,
+    0 0 151px #00F0B5;
+}
+
+h3.LED_morado:hover {
+    color: var(--color-morado-boton);
+  text-shadow:
+    
+    0 0 7px #F4F4ED,
+    0 0 10px #F4F4ED,
+    0 0 21px #F4F4ED,
+    
+    0 0 42px #5E239D,
+    0 0 82px #5E239D,
+    0 0 92px #5E239D,
+    0 0 102px #5E239D,
+    0 0 151px #5E239D;
+}
+
+
+/* /////////////////////////////////////////// */
 
 /* MEDIA QUERIES */
 
