--- a/WEB_PRACTICA_FINAL/css/styles_reservas.css
+++ b/WEB_PRACTICA_FINAL/css/styles_reservas.css
@@ -19,18 +19,15 @@ body{
     background-color: #F4F4ED;
 }
 
+
+
 .sectionaboutus{
     display: flex;
     flex-direction: row;
 }
 
-.aboutustext{
-    display: flex;
-    flex-direction: column;
-    margin: 4em;
-}
 
-.aboutustext h1{
+.aboutustitle h1{
     font-weight: 800;
     font-size:5rem;
     margin-block-end: 0em;
@@ -41,16 +38,12 @@ body{
     margin-bottom: 1em;
 }
 
-.aboutustext img{
+.aboutustitle img{
     width: 70px;
     margin-left: 0.3em;
     vertical-align: baseline;
 }
 
-.aboutustext p{
-    margin-right: 5em;
-    font-size: 1.2em;
-}
 
 .churrourban{
     display: flex;
@@ -65,17 +58,15 @@ background-attachment: fixed;
 background-size: cover;
 height: 35em;
 margin-bottom: 6em;
+background-position: center;
+
 }
 
 .reviews h2{
   margin-bottom: 1.2em;
 }
 
-.titulo_banner{
-    color: #F4F4ED;
-    text-align: center;
-    margin: 0;
-}
+
 
 .botonparallax{
 text-align: center;
@@ -118,8 +109,16 @@ padding-top: 14.5em;
 
 /* carrusel */
 
+.reviews{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  
+}
+
 .wrapper {
   width: 100%;
+  display: flex;
 }
 
 .wrapper .carousel {
@@ -136,23 +135,21 @@ padding-top: 14.5em;
   padding: 2em;
 }
 
-.aboutustext p {
-  margin-bottom: 0.6em;
-  margin-right: 0em;
-  margin-top: 0.6em;
+p{
+  padding: 0rem;
 }
 
-.owl-carousel .owl-item img {
-  display: block;
+
+
+. {
+  display: block;owl-carousel .owl-item img
   width: 100%;
   margin: 0;
 }
 
 
 
-.estrellas .owl-item image{
-  margin: 1em;
-}
+
 
 .card img {
   max-width: 7em; /* Ajusta el valor según tus necesidades */
@@ -248,3 +245,4 @@ padding-top: 14.5em;
 .overlay p {
   margin: 10px 0;
 }
+
