--- a/WEB_PRACTICA_FINAL/css/styles_reservas.css
+++ b/WEB_PRACTICA_FINAL/css/styles_reservas.css
@@ -24,22 +24,31 @@ body{
 .sectionaboutus{
     display: flex;
     flex-direction: row;
+    margin-bottom: 4em;
+}
+
+.aboutustitle{
+  margin: 2.2vw 4vw;
 }
 
 
 .aboutustitle h1{
     font-weight: 800;
-    font-size:5rem;
+    font-size:7vw;
     margin-block-end: 0em;
     margin-block-start: 0em;
     display: inline-block;
     vertical-align: baseline;
     margin: 0;
-    margin-bottom: 1em;
+    margin-bottom: 0.6em;
 }
 
-.aboutustitle img{
-    width: 70px;
+.aboutustitle p{
+  margin: 4vw;
+}
+
+.aboutustitle img, .ubicationtitle img{
+    width: 7vw;
     margin-left: 0.3em;
     vertical-align: baseline;
 }
@@ -48,7 +57,7 @@ body{
 .churrourban{
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 40vw;
 }
 
 .imagen_fondo{
@@ -64,6 +73,10 @@ background-position: center;
 
 .reviews h2{
   margin-bottom: 1.2em;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 0em;
+  font-size: 1.7vw;
 }
 
 
@@ -113,6 +126,7 @@ padding-top: 14.5em;
   display: flex;
   flex-direction: column;
   width: 100%;
+  margin-bottom: 8em;
   
 }
 
@@ -134,22 +148,6 @@ padding-top: 14.5em;
   background-color: #00F0B5;
   padding: 2em;
 }
-
-p{
-  padding: 0rem;
-}
-
-
-
-. {
-  display: block;owl-carousel .owl-item img
-  width: 100%;
-  margin: 0;
-}
-
-
-
-
 
 .card img {
   max-width: 7em; /* Ajusta el valor según tus necesidades */
@@ -246,3 +244,200 @@ p{
   margin: 10px 0;
 }
 
+/* ubicación */
+
+
+
+.sectionubication{
+  display: flex;
+  flex-direction: row;
+  height: 45vw;
+}
+
+.ubicationtitle {
+  display: flex;
+  border-width: 2px;
+  align-items: flex-end;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 4em;
+}
+
+.infoubication{
+  display: flex;
+  flex-direction: column-reverse;
+  flex-wrap: nowrap;
+  padding: 4em 4em 4em 0em;
+  background-color: #F61067;
+}
+
+.infoubication p, a{
+margin-bottom: 0;
+font-size: 1em;
+color: #F4F4ED;
+}
+
+.infoubication a{
+  color:  #F4F4ED;
+}
+
+
+.ubicationtitle h1{
+  font-weight: 800;
+  font-size:7vw;
+  margin-block-end: 0em;
+  margin-block-start: 0em;
+  display: inline-block;
+  vertical-align: baseline;
+  margin-bottom: 0.6em;
+}
+
+
+.ubicationtitle > div {
+  width: 75%;
+}
+
+.ubicationtitle > div > p {
+  margin-bottom: 0.2em;
+}
+
+.ubicationtitle > div > a {
+  color: black;
+}
+
+
+.google-maps {
+  display: flex;
+  background-color:#F61067;
+  flex-direction: column;
+  justify-content: center;
+  border-bottom: #000000;
+  border-width: 2px;
+  width: 70%;
+  align-items: center;
+  padding: 4em;
+}
+
+.google-maps div {
+  height: 70%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.google-maps div iframe {
+  height: 35vw;
+  width: 60vw;
+  border-radius: 25px;
+}
+
+
+
+
+
+/* seccion newsletter */
+button:focus,
+input:focus,
+textarea:focus {
+  outline: 0;
+}
+
+.newsletter_wrapper {
+  height: 50vw;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  border-right-style: solid;
+  border-left-style: solid;
+  border-width: 2px;
+}
+
+.newsletter_wrapper h2 {
+  color: #000000;
+  position: relative;
+  text-transform: uppercase;
+  margin-bottom: 0.3em;
+  font-size: 2.9em;
+}
+
+.newsletter_wrapper h1::before {
+  content: "";
+  position: absolute;
+  background: #dddddd;
+  width: 90px;
+  height: 1px;
+  bottom: -15px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.newsletter_wrapper p {
+  color: #000000;
+  font-size: 1.3em;
+  line-height: 1.2em;
+}
+
+.boton-enviar {
+  position: relative;
+}
+
+.placeholder {
+  margin: 1.4em 0em 0.8em 0em;
+  opacity: 1;
+  width: 24em;
+  height: 3em;
+  background-color: white;
+  display: flex;
+  justify-content: flex-start;
+  border-radius: 25px;
+}
+
+.placeholder input {
+  border-style: hidden;
+  width: 100%;
+  margin: 0px 0px 0px 23px;
+  background-color: transparent;
+}
+
+.enviar button {
+  width: 8.7em;
+  height: 3em;
+  border-style: hidden;
+  background-color: #ffffff;
+  border-radius: 25px;
+}
+
+.enviar button:hover {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.newsletter_wrapper form button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  background: #ffffff;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 0 20px;
+  border-left: 1px solid #ffffff;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.newsletter {
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: #9ec9ff;
+}
+
+.newsletter h1 {
+  margin-bottom: 0.6em;
+  overflow: hidden;
+  white-space: nowrap;
+}
